added export API
